--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
   .form-register {
     margin: 50px auto;
     border: 1px solid #00000026;
-    width: fit-content;
+    width: 450px;
     padding: 20px;
     font-size: 20px;
     border-radius: 7px;
@@ -20,10 +20,11 @@
 
   .form-group {
     border: 1px solid #00000026;
-    width: 100%;
+    width: 92%;
     padding: 5px;
     font-size: 20px;
     border-radius: 5px;
+    margin-bottom : 10px;
   }
   h1 {
     text-align: center;
@@ -59,6 +60,8 @@
   textarea {
     margin: 20px 0;
     outline: none;
+    width: -webkit-fill-available;
+    height: 300px;
   }
 
   select {
@@ -66,13 +69,15 @@
     height: 30px;
     background: white;
     border-radius: 5px;
+    outline: none;
   }
   input{
     height: 30px;
-    border: 1px solid #00000026;
+    border: 0.5px solid #00000026;
     border-radius: 5px;
     padding: 5px;
     outline: none;
+    transform: translateY(-25%);
   }
   label{
     width: 30%;
@@ -127,7 +132,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
           </button>
         </div>
-        <textarea class="text" rows="20" cols="50%"></textarea>
+        <textarea class="text"></textarea>
         <p class="error_form error" id="error4"></p>
       </div>
   </div>
